--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node public/app.js",
+    "start": "node public/server.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc -p .",
     "seed": "node public/db/runSeed.js"
@@ -33,7 +33,6 @@
     "husky": "^8.0.1",
     "jest": "^28.1.3",
     "jest-sorted": "^1.0.14",
-
     "nodemon": "^2.0.19",
     "supertest": "^6.2.4",
     "ts-node": "^10.9.1",
@@ -47,8 +46,9 @@
     "pg": "^8.7.3",
     "pg-format": "^1.0.4"
   },
-  
   "jest": {
-    "setupFilesAfterEnv": ["jest-sorted"]
+    "setupFilesAfterEnv": [
+      "jest-sorted"
+    ]
   }
 }
