--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node public/server.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc -p .",
-    "seed": "node public/db/runSeed.js"
+    "seed": "node public/db/runSeed.js",
+    "seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed"
   },
   "repository": {
     "type": "git",
