--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "nodemon src/app.ts",
     "build": "tsc -p .",
     "seed": "node public/db/runSeed.js",
-    "seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed"
+    "seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed",
+    "postinstall": "tsc",
+    "deploy": "git add . && git commit -m Heroku && git push heroku main"
   },
   "repository": {
     "type": "git",
@@ -52,4 +54,5 @@
       "jest-sorted"
     ]
   }
+  
 }
