--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "test": "jest",
     "start": "node public/server.js",
     "dev": "nodemon src/app.ts",
-    "build": "tsc -p .",
+    "build": "tsc",
     "seed": "node public/db/runSeed.js",
     "seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed",
-    "postinstall": "tsc",
+    "postinstall": "npm run build",
     "deploy": "git add . && git commit -m Heroku && git push heroku main"
   },
   "repository": {
