--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node public/server.js",
+    "start": "node public/app/server.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc",
     "seed": "node public/db/runSeed.js",
